--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+        <title>
+            Article one
+        </title>
+    </head>
+    <body>
+        <div>
+            <a here="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            18th february 2018
+        </div>
+        <div>
+            <p>
+                This is my paragraph.
+            </p>
+        </div>
+    </body>
 </html>
