[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <a here="/">home</a>
+            <a href="/">home</a>
         </div>
         <hr/>
         <h3>
