[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,22 +4,29 @@
             Article one
         </title>
         <meta name="viewport" content="width-device-width, initialscale=1">
+        <style>
+          .container{
+               color:red;
+          }  
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article one
-        </h3>
-        <div>
-            18th february 2018
-        </div>
-        <div>
-            <p>
-                This is my paragraph.
-            </p>
+        <div class ="container">
+            <div>
+                <a href="/">home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                18th february 2018
+            </div>
+            <div>
+                <p>
+                    This is my paragraph.
+                </p>
+            </div>
         </div>
     </body>
 </html>
