--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,11 +4,7 @@
             Article one
         </title>
         <meta name="viewport" content="width-device-width, initialscale=1">
-        <style>
-          .container{
-               color:red;
-          }  
-        </style>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class ="container">
